--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
   </div>
 
   <header>
-    <h1>🔥 Топ товары 🔥</h1>
+    <h1>🔥 Mom Anal 🔥</h1>
     <p>Лучшие предложения по моим ссылкам</p>
   </header>
 
