--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <!-- Favicon PNG -->
 <link rel="icon" type="image/png" href="favicon.png" sizes="32x32">
-<link rel="icon" type="image/png" href="favicon.png" sizes="16x16">
+<link rel="icon" type="image/png" href="favicon.png" sizes="64×64">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FantaN+</title>
