--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 <link rel="icon" type="image/png" href="favicon.png" sizes="64×64">
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FantaN+</title>
+  <title>FantaN</title>
 
   <!-- Подключаем шрифт -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
