--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
   </div>
 
   <header>
-    <h1>🔥 Mom Anal 🔥</h1>
+    <h1>🔥 Sites 🔥</h1>
     <p>Лучшие предложения по моим ссылкам</p>
   </header>
 
