--- a/index.html
+++ b/index.html
@@ -165,6 +165,9 @@
 
   <header>
     <h1>🔥 Sites 🔥</h1>
+    <div class="site-title">
+  <img src="images/mi-pics.png" alt="Site Logo" style="width:150px; height:auto;">
+</div>
     <p>Лучшие предложения по моим ссылкам</p>
   </header>
 
