--- a/index.html
+++ b/index.html
@@ -164,9 +164,9 @@
   </div>
 
   <header>
-    <h1>🔥 Sites 🔥</h1>
+    <h1>🔥 NsfW-PorN-AI 🔥</h1>
     <div class="site-title">
-  <img src="images/mi-pics.png" alt="Site Logo" style="width:150px; height:auto;">
+  <img src="images/mi-pics.png" alt="Site Logo" style="width:300px; height:auto;">
 </div>
     <p>Лучшие предложения по моим ссылкам</p>
   </header>
