--- a/index.html
+++ b/index.html
@@ -164,7 +164,24 @@
   </div>
 
   <header>
-    <h1>🔥 NsfW-PorN-AI 🔥</h1>
+    <head>
+  <!-- Подключаем шрифт Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+  <style>
+    h1 {
+      font-family: 'Orbitron', sans-serif;
+      font-size: 56px;
+      color: #ff0066;
+      text-align: center;
+      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
+      margin-top: 40px;
+    }
+  </style>
+</head>
+
+<body>
+  <h1>🔥 NsfW-PorN-AI 🔥</h1>
+</body>
     <div class="site-title">
   <img src="images/mi-pics.png" alt="Site Logo" style="width:300px; height:auto;">
 </div>
