--- a/index.html
+++ b/index.html
@@ -165,22 +165,23 @@
 
   <header>
     <head>
-  <!-- Подключаем шрифт Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@700&display=swap" rel="stylesheet">
+  <!-- Подключаем классический шрифт -->
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <style>
     h1 {
-      font-family: 'Orbitron', sans-serif;
-      font-size: 56px;
-      color: #ff0066;
+      font-family: 'Playfair Display', serif;
+      font-size: 54px;
+      color: #222;
       text-align: center;
-      text-shadow: 2px 2px 8px rgba(0,0,0,0.6);
+      letter-spacing: 2px; /* расстояние между буквами */
+      text-transform: uppercase; /* все буквы прописные */
       margin-top: 40px;
     }
   </style>
 </head>
 
 <body>
-  <h1>🔥 NsfW-PorN-AI 🔥</h1>
+  <h1>🔥 NSFW-PORN-AI 🔥</h1>
 </body>
     <div class="site-title">
   <img src="images/mi-pics.png" alt="Site Logo" style="width:300px; height:auto;">
