--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     </div>
   </div>
 
-  <header>
+  <header style="background-color: white; color: black;">
     <head>
   <!-- Подключаем классический шрифт -->
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
