--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Подключаем шрифты -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 
-  <!-- Подключаем внешний CSS -->
+  <!-- Подключаем CSS -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -34,7 +34,7 @@
     <p>Лучшие предложения по моим ссылкам</p>
   </header>
 
-  <!-- Карточки -->
+  <!-- Контент -->
   <div class="container">
     <div class="card">
       <img src="images/phone.jpg" alt="Телефон">
