--- a/index.html
+++ b/index.html
@@ -4,84 +4,92 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FantaN</title>
-
-  <!-- Favicon -->
-  <link rel="icon" type="image/png" href="favicon.png" sizes="64x64">
-
-  <!-- Подключаем шрифты -->
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
-
-  <!-- Подключаем CSS -->
   <link rel="stylesheet" href="style.css">
+  <!-- Шрифты -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <!-- Модальное окно -->
-  <div id="age-modal" class="modal">
-    <div class="modal-content">
-      <h2>Возрастное ограничение 18+</h2>
-      <p>Для входа на сайт подтвердите, что вам есть 18 лет.</p>
-      <button id="yes-btn">Да, мне 18+</button>
-      <button id="no-btn">Нет</button>
-    </div>
-  </div>
 
-  <!-- Шапка -->
-  <header>
-    <h1>🔥 NSFW-PORN-AI 🔥</h1>
-    <div class="site-title">
-      <img src="images/mi-pics.png" alt="Site Logo" class="logo">
+  <!-- Hero -->
+  <section id="hero" class="hero">
+    <div class="hero-bg"></div>
+    <div class="hero-content reveal">
+      <h1 class="neon-text">🔥 NSFW-PORN-AI 🔥</h1>
+      <p>Лучшие предложения по моим ссылкам</p>
+      <a href="#products" class="btn pulse">Смотреть товары</a>
     </div>
-    <p>Лучшие предложения по моим ссылкам</p>
-  </header>
+  </section>
 
-  <!-- Контент -->
-  <div class="container">
-    <div class="card">
-      <img src="images/phone.jpg" alt="Телефон">
-      <div class="card-content">
-        <h2>Смартфон</h2>
-        <p>Классный современный телефон.</p>
-        <a class="button" href="https://partnersite.com/product1?ref=123" target="_blank">Купить</a>
+  <!-- Products -->
+  <section id="products" class="products">
+    <h2 class="reveal">Наши товары</h2>
+    <div class="card-grid">
+      <div class="card reveal">
+        <img src="images/phone.jpg" alt="Телефон">
+        <div class="card-content">
+          <h3>Смартфон</h3>
+          <p>Современный телефон с мощным процессором.</p>
+          <a href="https://partnersite.com/product1?ref=123" target="_blank" class="btn">Купить</a>
+        </div>
+      </div>
+      <div class="card reveal">
+        <img src="images/shoes.png" alt="Кроссовки">
+        <div class="card-content">
+          <h3>Кроссовки</h3>
+          <p>Удобные и стильные, для спорта и прогулок.</p>
+          <a href="https://partnersite.com/product2?ref=123" target="_blank" class="btn">Купить</a>
+        </div>
+      </div>
+      <div class="card reveal">
+        <img src="images/watch.jpg" alt="Часы">
+        <div class="card-content">
+          <h3>Умные часы</h3>
+          <p>Следят за здоровьем и уведомлениями.</p>
+          <a href="https://partnersite.com/product3?ref=123" target="_blank" class="btn">Купить</a>
+        </div>
       </div>
     </div>
+  </section>
 
-    <div class="card">
-      <img src="images/shoes.png" alt="Кроссовки">
-      <div class="card-content">
-        <h2>Кроссовки</h2>
-        <p>Удобные и стильные для спорта и прогулок.</p>
-        <a class="button" href="https://partnersite.com/product2?ref=123" target="_blank">Купить</a>
-      </div>
-    </div>
+  <!-- Footer -->
+  <footer>
+    <p>© 2025 FantaN | Все права защищены</p>
+  </footer>
 
-    <div class="card">
-      <img src="images/watch.jpg" alt="Часы">
-      <div class="card-content">
-        <h2>Умные часы</h2>
-        <p>Следят за здоровьем и уведомлениями.</p>
-        <a class="button" href="https://partnersite.com/product3?ref=123" target="_blank">Купить</a>
-      </div>
-    </div>
-  </div>
-
-  <!-- JS -->
+  <!-- Скрипты -->
   <script>
-    const modal = document.getElementById("age-modal");
-    const yesBtn = document.getElementById("yes-btn");
-    const noBtn = document.getElementById("no-btn");
+    // Параллакс hero
+    const heroBg = document.querySelector('.hero-bg');
+    window.addEventListener('scroll', () => {
+      let scrollY = window.scrollY;
+      heroBg.style.transform = `translateY(${scrollY * 0.4}px)`;
+    });
 
-    yesBtn.onclick = () => {
-      modal.style.display = "none";
-      localStorage.setItem("ageConfirmed", "true");
-    };
+    // Параллакс карточек
+    const cards = document.querySelectorAll('.card');
+    window.addEventListener('scroll', () => {
+      let scrollY = window.scrollY;
+      cards.forEach((card) => {
+        let offset = (scrollY - card.offsetTop) * 0.05;
+        card.style.transform = `translateY(${offset}px)`;
+      });
+    });
 
-    noBtn.onclick = () => {
-      window.location.href = "https://google.com";
-    };
-
-    if (localStorage.getItem("ageConfirmed") === "true") {
-      modal.style.display = "none";
+    // Анимация появления при скролле
+    const reveals = document.querySelectorAll(".reveal");
+    window.addEventListener("scroll", revealOnScroll);
+    function revealOnScroll() {
+      let windowHeight = window.innerHeight;
+      reveals.forEach((el) => {
+        let elementTop = el.getBoundingClientRect().top;
+        let revealPoint = 100;
+        if (elementTop < windowHeight - revealPoint) {
+          el.classList.add("active");
+        }
+      });
     }
+    revealOnScroll();
   </script>
+
 </body>
 </html>
