--- a/index.html
+++ b/index.html
@@ -3,49 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>FantaN</title>
+  <title>FantaN – Лучшие NSFW AI продукты</title>
   <link rel="stylesheet" href="style.css">
-  <!-- Шрифты -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
 </head>
 <body>
 
-  <!-- Hero -->
+  <!-- Hero Section -->
   <section id="hero" class="hero">
     <div class="hero-bg"></div>
     <div class="hero-content reveal">
       <h1 class="neon-text">🔥 NSFW-PORN-AI 🔥</h1>
-      <p>Лучшие предложения по моим ссылкам</p>
-      <a href="#products" class="btn pulse">Смотреть товары</a>
+      <p>Эксклюзивные AI-продукты для взрослых с лучшими предложениями</p>
+      <a href="#products" class="btn pulse">Смотреть офферы</a>
     </div>
   </section>
 
-  <!-- Products -->
+  <!-- Products Section -->
   <section id="products" class="products">
-    <h2 class="reveal">Наши товары</h2>
+    <h2 class="reveal">Наши партнёрские офферы</h2>
     <div class="card-grid">
+      <!-- AIffiliate.io -->
       <div class="card reveal">
-        <img src="images/phone.jpg" alt="Телефон">
+        <img src="images/ai-porn.jpg" alt="AIffiliate.io">
         <div class="card-content">
-          <h3>Смартфон</h3>
-          <p>Современный телефон с мощным процессором.</p>
-          <a href="https://partnersite.com/product1?ref=123" target="_blank" class="btn">Купить</a>
+          <h3>AIffiliate.io</h3>
+          <p>AI Porn Affiliate Program с комиссией до 60 %</p>
+          <a href="https://aiffiliate.io/ai-porn-affiliate-program" target="_blank" class="btn">Стать партнёром</a>
         </div>
       </div>
+
+      <!-- ThotChat.AI -->
       <div class="card reveal">
-        <img src="images/shoes.png" alt="Кроссовки">
+        <img src="images/thotchat.jpg" alt="ThotChat.AI">
         <div class="card-content">
-          <h3>Кроссовки</h3>
-          <p>Удобные и стильные, для спорта и прогулок.</p>
-          <a href="https://partnersite.com/product2?ref=123" target="_blank" class="btn">Купить</a>
+          <h3>ThotChat.AI</h3>
+          <p>AI чат-бот для взрослых, до 40 % пожизненного дохода</p>
+          <a href="https://www.crakrevenue.com/offers/ai/thotchat-affiliate-program/" target="_blank" class="btn">Стать партнёром</a>
         </div>
       </div>
+
+      <!-- AdultForce -->
       <div class="card reveal">
-        <img src="images/watch.jpg" alt="Часы">
+        <img src="images/adultforce.jpg" alt="AdultForce">
         <div class="card-content">
-          <h3>Умные часы</h3>
-          <p>Следят за здоровьем и уведомлениями.</p>
-          <a href="https://partnersite.com/product3?ref=123" target="_blank" class="btn">Купить</a>
+          <h3>AdultForce</h3>
+          <p>Adult CPA сеть с офферами для Dating, Cam и VR</p>
+          <a href="https://www.adultforce.com/" target="_blank" class="btn">Стать партнёром</a>
+        </div>
+      </div>
+
+      <!-- FameDollars 2.0 -->
+      <div class="card reveal">
+        <img src="images/famedollars.jpg" alt="FameDollars">
+        <div class="card-content">
+          <h3>FameDollars 2.0</h3>
+          <p>RevShare и CPA для adult брендов от Gamma Entertainment</p>
+          <a href="https://www.gammastats.com/famedollars/" target="_blank" class="btn">Стать партнёром</a>
+        </div>
+      </div>
+
+      <!-- Datify.link -->
+      <div class="card reveal">
+        <img src="images/datify.jpg" alt="Datify.link">
+        <div class="card-content">
+          <h3>Datify.link</h3>
+          <p>Smartlink сеть с офферами в Dating, Cam, Adult Games</p>
+          <a href="https://datify.link/" target="_blank" class="btn">Стать партнёром</a>
+        </div>
+      </div>
+
+      <!-- MyLead -->
+      <div class="card reveal">
+        <img src="images/mylead.jpg" alt="MyLead">
+        <div class="card-content">
+          <h3>MyLead – Adult Offers</h3>
+          <p>CPA, CPL, RevShare – более 500 офферов</p>
+          <a href="https://mylead.global/en" target="_blank" class="btn">Стать партнёром</a>
+        </div>
+      </div>
+
+      <!-- Infatuated.AI -->
+      <div class="card reveal">
+        <img src="images/infatuated.jpg" alt="Infatuated.AI">
+        <div class="card-content">
+          <h3>Infatuated.AI</h3>
+          <p>AI-платформа с виртуальными отношениями, 35 % RevShare</p>
+          <a href="https://offervault.com/offer/45287b41285fb9cb77b0f85ace0bd513/infatuatedai-lifetime-revshare" target="_blank" class="btn">Стать партнёром</a>
+        </div>
+      </div>
+
+      <!-- Creatify.AI -->
+      <div class="card reveal">
+        <img src="images/creatify.jpg" alt="Creatify.AI">
+        <div class="card-content">
+          <h3>Creatify.AI</h3>
+          <p>Платформа для AI-видео, 50 % с каждой рекомендации</p>
+          <a href="https://creatify.ai/affiliate" target="_blank" class="btn">Стать партнёром</a>
         </div>
       </div>
     </div>
@@ -53,10 +107,9 @@
 
   <!-- Footer -->
   <footer>
-    <p>© 2025 FantaN | Все права защищены</p>
+    <p>© 2025 FantaN | Все права защищены | Партнёрские ссылки</p>
   </footer>
 
-  <!-- Скрипты -->
   <script>
     // Параллакс hero
     const heroBg = document.querySelector('.hero-bg');
@@ -90,6 +143,5 @@
     }
     revealOnScroll();
   </script>
-
 </body>
 </html>
